--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,117 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="/static/css/style.css">
-</head>
-<body>
-    <h1>home page</h1>
-    <img src="/static/imgs/best5.jpg">
+    <title>Hello, world!</title>
+  </head>
+  <body>
+    {{>navbar data=details}}
+    {{!-- {{details}} --}}
+  {{>slider slides=slides}}
+  {{!-- banner section here --}}
+<section class="banner1_section py-5 bg1">
+<div class="container text-center">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>wanna know more about me?</h1>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Perspiciatis, officia quod voluptatum et, incidunt, d
+        oloremque nesciunt deserunt amet quas omnis tempora nostrum enim dignissimos magni fugiat sed hic reiciendis quam eos accusantium. Maxime hic libero natus maiores, sunt ipsum amet ad repellendus 
+        perferendis accusamus, cumque quae at cum error eligendi.</p>
+        <button class="btn btn-outline-primary">Know More</button>
+    </div>
+  </div>
+</div>
+
+</section>
+
+
+  {{!-- services section --}}
+
+  <section id="services_section" class="py-3">
+    <div class="container">
+ <h1 class="text-center text-secondary" >our services</h1>
+    <div class="row mt-5">
+      {{#each services}}
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <div class="container text-center py-3">
+              <i class="{{this.icon}} service_icon text-secondary"></i>
+            </div>
+           
+            <h3 class="card-title service_title">{{this.title}}</h3>
+            <p>{{this.description}}</p>
+          <a href="{{this.link}}">{{this.linktext}}</a>
+          {{!-- <a href="#!">Support</a> --}}
+
+
+          
+          </div>
+
+        </div>
+      </div>
+      {{/each}}
+        
+    </div>
+    </div>
+   
+
+
+  </section>
+
+{{!-- //banner2 section here --}}
+<section class="banner2_section py-5">
+  <div class="container text-center py-5">
+    <div class="row">
+      <div class="col-md-6 text-center pt-5">
+          {{!-- left side.. --}}
+          <h3>I love Coding</h3>
+          <p>I can code a whole day but i'll surely sleep the whole next day!LOL</p>
+      </div>
+        <div class="col-md-6 ">
+          {{!-- //right side,,. --}}
+          <img src="/static/imgs/LAPTOP.jpg" style="height:300px;max-width:300px;object-fit:cover;border-radius:50%;">
+        
+      </div>
+    </div>
+  </div>
+    <div class="container text-center">
+    <div class="row">
+      <div class="col-md-6">
+          {{!-- //right side,,. --}}
+          <img src="/static/imgs/LAPTOP.jpg" style="height:300px;width:300px;object-fit:cover;border-radius:50%;" class="img-fluid">
+        
+      </div>
+      <div class="col-md-6 text-center pt-5">
+          {{!-- left side.. --}}
+          <h3>I love Coding</h3>
+          <p>I can code a whole day but i'll surely sleep the whole next day!LOL</p>
+      </div>
+        
+    </div>
+  </div>
+</section>
+
+
+
+
+  {{>form}}
+
+
+
+
+   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     
-</body>
+  </body>
 </html>
