--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,11 +21,13 @@
 <div class="container text-center">
   <div class="row">
     <div class="col-md-12">
-      <h1>wanna know more about me?</h1>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-        Perspiciatis, officia quod voluptatum et, incidunt, d
-        oloremque nesciunt deserunt amet quas omnis tempora nostrum enim dignissimos magni fugiat sed hic reiciendis quam eos accusantium. Maxime hic libero natus maiores, sunt ipsum amet ad repellendus 
-        perferendis accusamus, cumque quae at cum error eligendi.</p>
+      <h1>Wanna know more about me?</h1>
+      <p>Highly motivated and detail-oriented computer science student 
+        seeking a challenging position in the IT industry to apply my
+         technical skills and knowledge gained through coursework and
+          practical experience. I am eager to contribute to a dynamic
+           team and further develop 
+        my skills while making a positive impact in the field.</p>
         <button class="btn btn-outline-primary">Know More</button>
     </div>
   </div>
@@ -38,7 +40,7 @@
 
   <section id="services_section" class="py-3">
     <div class="container">
- <h1 class="text-center text-secondary" >our services</h1>
+ <h1 class="text-center text-secondary" >How can I help u?</h1>
     <div class="row mt-5">
       {{#each services}}
       <div class="col-md-4">
@@ -105,6 +107,29 @@
 
 
   {{>form}}
+  {{!-- about section is here --}}
+
+  <section class="about_scetion">
+    <div class="container py-5 text-center">
+      <div class="row">
+        <div class="col-md-12">
+            <h3>
+              About Us
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Error dolor illo quidem officia hic deleniti numquam quisquam,
+               alias saepe laborum odit dolore accusamus nostrum nesciunt
+               cumque, quasi labore. Ipsum alias delectus error eum fugiat 
+               totam beatae ex sit corrupti est sequi asperiores possimus 
+               vero excepturi nostrum quis ratione, quaerat odio vel commodi
+                reprehenderit eveniet itaque saepe! Vero aliquid reprehenderit laboriosam repellendus nobis soluta aperiam nesciunt? Voluptatibus dolorum velit maiores perferendis fugit modi possimus, explicabo eum perspiciatis pariatur corporis error? Reprehenderit suscipit voluptatem excepturi exercitationem neque. Unde illum minus, quidem, ad quos eius minima 
+              exercitationem voluptate non possimus consectetur fugit iure.</p>
+              <button class="btn btn-success">contact us</button>
+
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
