--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar border-bottom navbar-expand-lg py-2 navbar-light bg-light">
+<nav class="navbar  border-bottom navbar-expand-lg py-2 navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" href="#"><img src="{{data.brandIconUrl}}" width="40" height="40" style="border-radius: 50%;margin-right:10%;" class="d-inline-block align-text-top">{{data.brandName}}</a> 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,12 +11,10 @@
           <a class="nav-link active" aria-current="page" href="{{this.url}}">{{this.label}}</a>
         </li>
         {{/each}}
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
+        
         
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Admin</a>
         </li>
       </ul>
       
